[gd_scene load_steps=2 format=2]

[ext_resource path="res://UpdateTrainingAMC.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="TrainingPanel" type="Panel" parent="."]
margin_left = 262.236
margin_top = 23.9819
margin_right = 734.236
margin_bottom = 735.982
rect_pivot_offset = Vector2( 264, 432 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="Label" parent="TrainingPanel"]
margin_left = -24.0
margin_top = 8.0
margin_right = 502.0
margin_bottom = 107.0
text = "Training
Each problem is originally worth 7 points.
If you get it wrong, the value of the problem
decreases by 2 points.
Each problem will be worth at least 1 point,
unless you don't submit that problem."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Text" type="Label" parent="TrainingPanel"]
margin_left = 96.0
margin_top = 144.0
margin_right = 162.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -672, 40 )
text = "Problem 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Description" type="Label" parent="TrainingPanel"]
margin_left = 184.0
margin_top = 144.0
margin_right = 282.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -760, 40 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Status" type="Label" parent="TrainingPanel"]
margin_left = 160.0
margin_top = 168.0
margin_right = 278.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -696, 16 )
text = "Unattempted (0/7)"

[node name="Problem1Submit" type="Button" parent="TrainingPanel"]
margin_left = 224.0
margin_top = 200.0
margin_right = 304.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( -760, -16 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 136.0
margin_top = 200.0
margin_right = 192.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( -672, -16 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 320.0
margin_top = 144.0
margin_right = 404.0
margin_bottom = 158.0
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.163
margin_top = 141.84
margin_right = 372.163
margin_bottom = 231.84
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Text" type="Label" parent="TrainingPanel"]
margin_left = 96.0
margin_top = 264.0
margin_right = 162.0
margin_bottom = 278.0
text = "Problem 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Description" type="Label" parent="TrainingPanel"]
margin_left = 184.0
margin_top = 264.0
margin_right = 282.0
margin_bottom = 278.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Status" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 288.0
margin_right = 286.0
margin_bottom = 304.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Submit" type="Button" parent="TrainingPanel"]
margin_left = 224.0
margin_top = 312.0
margin_right = 304.0
margin_bottom = 332.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 136.0
margin_top = 312.0
margin_right = 192.0
margin_bottom = 332.0
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 320.0
margin_top = 264.0
margin_right = 404.0
margin_bottom = 278.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.548
margin_top = 258.813
margin_right = 372.548
margin_bottom = 348.813
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Text" type="Label" parent="TrainingPanel"]
margin_left = 96.0
margin_top = 376.0
margin_right = 162.0
margin_bottom = 390.0
text = "Problem 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Description" type="Label" parent="TrainingPanel"]
margin_left = 200.0
margin_top = 376.0
margin_right = 298.0
margin_bottom = 390.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Status" type="Label" parent="TrainingPanel"]
margin_left = 176.0
margin_top = 400.0
margin_right = 294.0
margin_bottom = 416.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Submit" type="Button" parent="TrainingPanel"]
margin_left = 240.0
margin_top = 424.0
margin_right = 320.0
margin_bottom = 444.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 152.0
margin_top = 424.0
margin_right = 208.0
margin_bottom = 444.0
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 344.0
margin_top = 376.0
margin_right = 428.0
margin_bottom = 390.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.548
margin_top = 372.176
margin_right = 372.548
margin_bottom = 462.176
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Text" type="Label" parent="TrainingPanel"]
margin_left = 104.0
margin_top = 480.0
margin_right = 170.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Description" type="Label" parent="TrainingPanel"]
margin_left = 192.0
margin_top = 480.0
margin_right = 290.0
margin_bottom = 494.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Status" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 504.0
margin_right = 286.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem4Submit" type="Button" parent="TrainingPanel"]
margin_left = 232.0
margin_top = 536.0
margin_right = 312.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 144.0
margin_top = 536.0
margin_right = 200.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 104, -8 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 328.0
margin_top = 480.0
margin_right = 412.0
margin_bottom = 494.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 127.429
margin_top = 485.538
margin_right = 370.429
margin_bottom = 575.538
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Text" type="Label" parent="TrainingPanel"]
margin_left = 104.0
margin_top = 584.0
margin_right = 170.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Description" type="Label" parent="TrainingPanel"]
margin_left = 192.0
margin_top = 584.0
margin_right = 290.0
margin_bottom = 598.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Status" type="Label" parent="TrainingPanel"]
margin_left = 168.0
margin_top = 608.0
margin_right = 286.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem5Submit" type="Button" parent="TrainingPanel"]
margin_left = 232.0
margin_top = 640.0
margin_right = 312.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 144.0
margin_top = 640.0
margin_right = 200.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 104, -8 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Link" type="LinkButton" parent="TrainingPanel"]
margin_left = 328.0
margin_top = 584.0
margin_right = 412.0
margin_bottom = 598.0
focus_mode = 2
text = "Problem Link"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 128.489
margin_top = 603.139
margin_right = 371.489
margin_bottom = 693.139
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TrainingPanel/Problem1Submit" to="TrainingPanel" method="_on_Problem1Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem1Link" to="TrainingPanel" method="_on_Problem1Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem2Submit" to="TrainingPanel" method="_on_Problem2Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem2Link" to="TrainingPanel" method="_on_Problem2Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem3Submit" to="TrainingPanel" method="_on_Problem3Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem3Link" to="TrainingPanel" method="_on_Problem3Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem4Submit" to="TrainingPanel" method="_on_Problem4Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem4Link" to="TrainingPanel" method="_on_Problem4Link_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem5Submit" to="TrainingPanel" method="_on_Problem5Submit_pressed"]
[connection signal="pressed" from="TrainingPanel/Problem5Link" to="TrainingPanel" method="_on_Problem5Link_pressed"]
